k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gromacs-tuner-api
  namespace: gromacs-tuner-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gromacs-tuner-api
  template:
    metadata:
      labels:
        app: gromacs-tuner-api
    spec:
      securityContext:
        fsGroupChangePolicy: OnRootMismatch
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: api
        image: cerit.io/adamondrejka/gromacs-tuner-api:1.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:
          limits:
            cpu: "2"
            memory: "2Gi"
          requests:
            cpu: "1"
            memory: "1Gi"
        securityContext:
          runAsUser: 1000
          capabilities:
            drop:
            - ALL
          allowPrivilegeEscalation: false
        volumeMounts:
        - name: gromacs-pvc
          mountPath: /tmp/tpr
      volumes:
      - name: gromacs-pvc
        persistentVolumeClaim:
          claimName: gromacs-pvc
